syntax = "proto3";

option csharp_namespace = "Elsa.Workflows.Api.Rpc";
import "google/api/annotations.proto";

package workflow_definition;

// The workflow definition service definition.
service WorkflowDefinitionService {
  rpc GetIsNameUnique (GetIsNameUniqueRequest) returns (GetIsNameUniqueResponse) {
    option (google.api.http) = {
      get: "/workflow-definitions/is-name-unique/{name}"
    };
  }
}

message GetIsNameUniqueRequest {
  string name = 1;
}

message GetIsNameUniqueResponse {
  bool isUnique = 1;
}